# handler.js
@@ -34,7 +34,7 @@ module.exports.partnerGet = require('./src/partner/get')
 module.exports.partnerSignin = require('./src/partner/signin')
 module.exports.partnerDestroy = require('./src/partner/destroy')
 
-module.exports.ticketCreate = require('./src/ticket/create')
+module.exports.ticketCreate = lambda(require('./src/ticket/create'))
 module.exports.ticketGet = require('./src/ticket/get')
 
 module.exports.fileUpload = require('./src/file/upload')
